force-app/main/default/objects/Tax_Notice_Index__c/fields/Agency_Information__c.field-meta.xml
<CustomField>
    <fullName>Agency_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NAME OF AGENCY THAT ISSUED TAX NOTICE</description>
    <label>Agency Information</label>
    <referenceTo>Agency_Information__c</referenceTo>
    <relationshipLabel>Tax Notice Indexs</relationshipLabel>
    <relationshipName>Tax_Notice_Indexs</relationshipName>
    <type>Lookup</type>
</CustomField>