force-app/main/default/objects/Tax_Notice_Index__c/fields/Assigned_Client_Tax_ID_Agency_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Client_Tax_ID_Agency_Assigned__c</fullName>
    <description>TAX ACCOUNT NUMBER ASSIGNED TO EMPLOYER BY THE AGENCY</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Client Tax ID (Agency Assigned)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>