force-app/main/default/objects/Tax_Notice_Index__c/fields/Automation_Message__c.field-meta.xml
<CustomField>
    <fullName>Automation_Message__c</fullName>
    <description>This is used to track on TNDC level errors</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Automation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>