force-app/main/default/objects/Tax_Notice_Index__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Tax Notice Indexs</relationshipLabel>
    <relationshipName>Tax_Notice_Indexs</relationshipName>
    <type>Lookup</type>
</CustomField>