force-app/main/default/objects/Tax_Notice_Index__c/fields/Client_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_Text__c</fullName>
    <description>This will hold the Account Name in text format sent to SFDC via Instabase</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Name Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>