force-app/main/default/objects/Tax_Notice_Index__c/fields/Client_Tax_ID_Conf_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Tax_ID_Conf_Score__c</fullName>
    <description>This field is used to store Assigned Client Tax ID (Agency Assigned) Confidence Score from Integration.</description>
    <label>Client Tax ID Conf. Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>