force-app/main/default/objects/Tax_Notice_Index__c/fields/Client_Tax_ID_Manually_Validated__c.field-meta.xml
<CustomField>
    <fullName>Client_Tax_ID_Manually_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check the if the Assigned Client Tax ID (Agency Assigned) Manual Validation Completed</description>
    <label>Client Tax ID Manually Validated</label>
    <type>Checkbox</type>
</CustomField>