force-app/main/default/objects/Tax_Notice_Index__c/fields/Gusto_is_addressee_of_record__c.field-meta.xml
<CustomField>
    <fullName>Gusto_is_addressee_of_record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gusto is addressee of record?</label>
    <type>Checkbox</type>
</CustomField>