force-app/main/default/objects/Tax_Notice_Index__c/fields/Interest_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount_Due__c</fullName>
    <description>used in TaxResNoticeIndexDetail page</description>
    <label>Interest Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>