force-app/main/default/objects/Tax_Notice_Index__c/fields/Interest_Amount_Due_Conf_Score_Reason__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount_Due_Conf_Score_Reason__c</fullName>
    <description>This field is used to store Interest Amount Due Confidence Score Reason from Integration.</description>
    <label>Interest Amount Due Conf. Score Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Res_Confidence_Score_Reason</valueSetName>
    </valueSet>
</CustomField>