force-app/main/default/objects/Tax_Notice_Index__c/fields/Manual_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be set by OCR automation tool if manual review is needed.</description>
    <label>Manual Review Required</label>
    <type>Checkbox</type>
</CustomField>