force-app/main/default/objects/Tax_Notice_Index__c/fields/MRR_Reason__c.field-meta.xml
<CustomField>
    <fullName>MRR_Reason__c</fullName>
    <description>This is used to store the Manual Review Required Reason from integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MRR Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>