force-app/main/default/objects/Tax_Notice_Index__c/fields/Multi_YR_QTR_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Multi_YR_QTR_Indicator__c</fullName>
    <description>INDICATE IF THE NOTICE INCLUDES MULTIPLE YEARS/QUARTERS</description>
    <label>Multi YR/QTR Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>agentsync__Yes_or_No</valueSetName>
    </valueSet>
</CustomField>