force-app/main/default/objects/Tax_Notice_Index__c/fields/Notice_Form_Number_Conf_Score_Reason__c.field-meta.xml
<CustomField>
    <fullName>Notice_Form_Number_Conf_Score_Reason__c</fullName>
    <label>Notice Form Number Conf. Score Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Res_Confidence_Score_Reason</valueSetName>
    </valueSet>
</CustomField>