force-app/main/default/objects/Tax_Notice_Index__c/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <label>Partner Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>