force-app/main/default/objects/Tax_Notice_Index__c/fields/Processing_State__c.field-meta.xml
<CustomField>
    <fullName>Processing_State__c</fullName>
    <description>The current processing state for this record.</description>
    <label>Processing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Processing_States</valueSetName>
    </valueSet>
</CustomField>