force-app/main/default/objects/Tax_Notice_Index__c/fields/RAF_Indicator__c.field-meta.xml
<CustomField>
    <fullName>RAF_Indicator__c</fullName>
    <description>Used on TaxResNoticeIndexDetail page</description>
    <label>RAF Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>agentsync__Yes_or_No</valueSetName>
    </valueSet>
</CustomField>