force-app/main/default/objects/Tax_Notice_Index__c/fields/SUI_Rate_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>SUI_Rate_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SUI Rate Effective Date</label>
    <type>Date</type>
</CustomField>