force-app/main/default/objects/Tax_Notice_Index__c/fields/Tax_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Notice_Date__c</fullName>
    <description>DATE THE NOTICE WAS PRODUCED BY THE AGENCY</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Notice Date</label>
    <type>Date</type>
</CustomField>