force-app/main/default/objects/Tax_Notice_Index__c/fields/Tax_Notice_Date_Conf_Score_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tax_Notice_Date_Conf_Score_Reason__c</fullName>
    <description>This field is used to store Confidence Score Reason for Tax Notice Date</description>
    <label>Tax Notice Date Conf. Score Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Res_Confidence_Score_Reason</valueSetName>
    </valueSet>
</CustomField>