force-app/main/default/objects/Tax_Notice_Index__c/fields/Tax_Notice_Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Notice_Form_Number__c</fullName>
    <description>THE ALPHA/NUMERIC VALUE THE AGENCY ASSIGNS TO A TAX NOTICE [CP 504B, IA-1100, ETC]</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Notice Form Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>