force-app/main/default/objects/Tax_Notice_Index__c/fields/Tax_Notice_Numeration__c.field-meta.xml
<CustomField>
    <fullName>Tax_Notice_Numeration__c</fullName>
    <label>Tax Notice Numeration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>FINAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>