force-app/main/default/objects/Tax_Notice_Index__c/fields/Tax_Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Notice_Type__c</fullName>
    <description>Type of Tax the notice pertains to</description>
    <label>Tax  Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Notice_Type</valueSetName>
    </valueSet>
</CustomField>