force-app/main/default/objects/Tax_Notice_Index__c/fields/Tax_Notice_Type_Conf_Score__c.field-meta.xml
<CustomField>
    <fullName>Tax_Notice_Type_Conf_Score__c</fullName>
    <description>This field is used to store Tax Notice Type Confidence Score from Integration.</description>
    <label>Tax Notice Type Conf. Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>