force-app/main/default/objects/Tax_Notice_Index__c/fields/Tax_Rate_Json__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Json__c</fullName>
    <description>This field will be filled by OCR process. Tax Rate Type recors are generated based on this field.</description>
    <label>Tax Rate Json</label>
    <type>TextArea</type>
</CustomField>