force-app/main/default/objects/Tax_Notice_Index__c/fields/Yr_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Yr_Qtr__c</fullName>
    <description>The period for which the notice was issued</description>
    <label>Year/Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>Q4 2025</fullName>
            </value>
            <value>
                <fullName>Q3 2025</fullName>
            </value>
            <value>
                <fullName>Q2 2025</fullName>
            </value>
            <value>
                <fullName>Q1 2025</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>Q4 2024</fullName>
            </value>
            <value>
                <fullName>Q3 2024</fullName>
            </value>
            <value>
                <fullName>Q2 2024</fullName>
            </value>
            <value>
                <fullName>Q1 2024</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>Q4 2023</fullName>
            </value>
            <value>
                <fullName>Q3 2023</fullName>
            </value>
            <value>
                <fullName>Q2 2023</fullName>
            </value>
            <value>
                <fullName>Q1 2023</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>Q4 2022</fullName>
            </value>
            <value>
                <fullName>Q3 2022</fullName>
            </value>
            <value>
                <fullName>Q2 2022</fullName>
            </value>
            <value>
                <fullName>Q1 2022</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>Q4 2021</fullName>
            </value>
            <value>
                <fullName>Q3 2021</fullName>
            </value>
            <value>
                <fullName>Q2 2021</fullName>
            </value>
            <value>
                <fullName>Q1 2021</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>Q4 2020</fullName>
            </value>
            <value>
                <fullName>Q3 2020</fullName>
            </value>
            <value>
                <fullName>Q2 2020</fullName>
            </value>
            <value>
                <fullName>Q1 2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>