force-app/main/default/objects/Tax_Notice_Index__c/fields/ZP_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_Id__c</fullName>
    <description>It is used to store the Company Id for the Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ZP Company Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>