force-app/main/default/objects/Tax_Notice_Index__c/recordTypes/Manual_Indexing.recordType-meta.xml
<RecordType>
    <fullName>Manual_Indexing</fullName>
    <active>true</active>
    <description>This will be default for any indexers picking up cases</description>
    <label>Manual Indexing</label>
</RecordType>