force-app/main/default/objects/Tax_Notice_Index__c/recordTypes/OCR.recordType-meta.xml
<RecordType>
    <fullName>OCR</fullName>
    <active>true</active>
    <description>This will be used by IDP Indexing</description>
    <label>IDP Indexing</label>
</RecordType>